Fixed locked image alignment on badge catalog.

--- a/makahiki/static/less/widget-badges.less
+++ b/makahiki/static/less/widget-badges.less
@@ -34,6 +34,7 @@
 
 .locked-img {
     margin-top: -12px;
+    vertical-align: top;
 }
 
 .margin-one-third {
